--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -17,56 +17,137 @@ body {
 }
 
 header {
-    background-color: pink;
+    background: url("../assets/images/header.png") no-repeat;
+    background-size: cover;
     grid-area: header;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 0.5em;
+    line-height: 50px;
+    font-size: 32px;
+    font-weight: bolder;
+    color: rgb(109, 40, 74);
 }
 
 main {
     grid-area: main;
-    background-color: aliceblue;
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     grid-template-areas: "options slate pens";
 }
 
 #options {
-    background-color: powderblue;
+    grid-area: options;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+button {
+    height: 50px;
+    width: 150px;
+    background-color: rgb(154, 255, 255);
+    border: none;
+    border-radius: 25px;
+    font-size: large;
+    font-weight: bold;
+    color: rgb(248, 19, 248);
+}
+
+button:hover {
+    cursor: pointer;
+    box-shadow: 0 0 10px 2px hotpink;
+
+}
+
+button:focus {
+    outline: none;
+    box-shadow: 0 0 10px 2px hotpink;
 }
 
 #container {
     grid-area: slate;
-    background-color: blueviolet;
 }
 
 #color-thickness {
     grid-area: pens;
     display: grid;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 1fr 3fr;
     grid-template-areas: "colorpicker"
                          "thickness"   ;
-    background-color: rebeccapurple;
 }
 
 #color-picker {
-    grid-area: "colorpicker";
+    grid-area: colorpicker;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+input[name="penColor"]{
+    cursor: pointer;
+    outline: none;
+    border-radius: 50%;
+
+}
+
+label {
+    display: block;
+    font-family: monospace;
+    font-weight: bolder;
+    font-size: x-large;
+    color: hotpink;
+    padding: 5px;
+    margin: 5px;
+}
+
+#penColor {
+    border: none;
+    border-radius: 5px;
+    width: 100px;
+    height: 50px;
 }
 
 #pen-picker {
-    grid-area: "thickness";
+    grid-area: thickness;
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+}
+
+#pens {
+    display: flex;
+    height: 100%;
+    width: 80%;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 #pens img {
-    height: 200px;
+    max-height: 300px;
 }
 
 #grid {
     height: 100%;
     width: 100%;
-    background-color: cornflowerblue;
+    background-color: whitesmoke;
+    /* background-color: rgb(255, 219, 234); */
 }
-
 
 footer {
     grid-area: footer;
-    background-color: plum;
+    background-color: rgb(255, 227, 255);
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+footer p {
+    margin-top: 10px;
+    font-size: x-large;
+    font-weight: bold;
+    color: rebeccapurple;
 }
