--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 header {
-    background: url("../assets/images/header.png") no-repeat;
+    background: url("../assets/images/backgrounds/header1.png") no-repeat;
     background-size: cover;
     grid-area: header;
     display: flex;
@@ -131,6 +131,10 @@ label {
     max-height: 300px;
 }
 
+#pens img:hover {
+    cursor: pointer;
+}
+
 #grid {
     height: 100%;
     width: 100%;
@@ -140,14 +144,25 @@ label {
 
 footer {
     grid-area: footer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: rgb(255, 227, 255);
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 footer p {
-    margin-top: 10px;
+    display: inline-block;
     font-size: x-large;
     font-weight: bold;
+    padding: 5px;
     color: rebeccapurple;
+}
+
+.selected {
+    transform: scale(1.5);
+    text-shadow:3px 3px 1px rgb(219, 114, 211);
+    overflow: hidden;
 }
