Rename reset to clear-screen, change functionality

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -68,6 +68,10 @@ button:focus {
     box-shadow: 0 0 10px 2px hotpink;
 }
 
+#clear-screen:focus{
+    box-shadow: none;
+}
+
 #container {
     grid-area: slate;
 }
