--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -145,7 +145,7 @@ label {
 #grid {
     height: 100%;
     width: 100%;
-    background-color: whitesmoke;
+    background-color: aliceblue;
     /* background-color: rgb(255, 219, 234); */
 }
 
