Add event listeners to different things on the app

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -38,3 +38,12 @@
 .brushes {
     display: flex;
 }
+
+.brush {
+    height: 300px;
+}
+
+.brush__img {
+    width: auto;
+    max-height: 100%;
+}
