update select brush and clear canvas methods

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -27,12 +27,12 @@
     padding: 20px;
 }
 
-.canvas {
+.drawing-area {
     display: grid;
     height: 500px;
     width: 500px;
     margin: 0 auto;
-    background: aqua;
+    background: aliceblue;
 }
 
 .mode {
