--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -43,8 +43,17 @@
     background: aliceblue;
 }
 
+.clear-canvas {
+    margin-top: 10px;
+    cursor: pointer;
+}
+
 .painting {
     cursor: url("../assets/images/cursors/brush3.cur"), auto;
+}
+
+.actions {
+    display: flex;
 }
 
 .action {
@@ -53,6 +62,17 @@
 
 .cleaning {
     cursor: url("../assets/images/cursors/eraser.cur"), auto;
+}
+
+.modes, .accessories {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.modes__hue {
+    display: flex;
 }
 
 .mode {
